tests/fixtures/invalid/round_none_int.py
# Cannot call round() with None, Int
x = round(None, 1)
